SCANJLIB-208 Support new bootstrapping mechanism